openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: melody
spec:
  selector:
    app: melody
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
