openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: melody
spec:
  to:
    kind: Service
    name: melody
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
